# actorsc

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEV_ENVIRONMENT.md  PROJECT_PLAN.md  README.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
actors/: actor_base.cppm  actor_base.hpp  actor_context.cppm  actor_context.hpp  actor_registry.cppm  actor_registry.hpp
distributed/: node.cppm  node.hpp  sync.cppm  sync.hpp  transport.cppm  transport.hpp
factory/: abstract_factory.cppm  abstract_factory.hpp  ioc_container.cppm  ioc_container.hpp
runtime/: elaborated_design.cppm  elaborated_design.hpp  main.cpp
scheduler/: delta_cycle.cppm  delta_cycle.hpp  simulation_cycle.cppm  simulation_cycle.hpp  thread_pool.cppm  thread_pool.hpp
signals/: signal_base.cppm  signal_base.hpp  signal_bool.cppm  signal_bool.hpp  signal_concepts.cppm  signal_concepts.hpp  signal_int.cppm  signal_int.hpp
tests/: CMakeLists.txt
tests/distributed/: test_distributed_scaffold.cpp
tests/functional/: test_convergence.cpp  test_delta_cycle.cpp  test_transaction_propagation.cpp
tests/integration/: test_elaborated_design.cpp  test_simulation_cycle.cpp
tests/unit/: test_actors.cpp  test_factory.cpp  test_ioc.cpp  test_signals.cpp  test_thread_pool.cpp
